# datapilot

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_config.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: main.py
backend/agents/: __init__.py  analytics_agent.py  document_agent.py  sql_agent.py  supervisor.py
backend/api/: routes.py  streaming.py  websocket.py
backend/core/: config.py  llm.py  memory.py  models.py  rate_limiter.py
backend/db/: database.py
backend/mcp_servers/: analytics_mcp.py  document_mcp.py  sql_mcp.py
data/sample_docs/: enterprise_msa_globalsync.txt  invoice_cloudhost_dec2024.txt  q4_2024_board_report.txt  series_a_board_deck_q1_2025.txt  soc2_compliance_summary.txt  vendor_contract_cloudhost.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentTrace.tsx  ChatMessage.tsx  Header.tsx
scripts/: seed_database.py
tests/eval/: __init__.py  eval_suite.py
tests/unit/: test_database.py  test_models.py
